--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -19,13 +19,16 @@
   <!--  <link rel="stylesheet" type="text/css" href="resources/css_bootstrap/bootstrap.css">-->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <!--<link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/quill/quill.snow.css" rel="stylesheet">
-  <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">
+  <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">-->
   <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
 </head>
 <body class="mat-typography">
+<!--<body class="mat-typography">-->
 <app-root></app-root>
+
+
 </body>
 </html>
