Spring_angular_websocket_01

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -28,6 +28,9 @@
 <body class="mat-typography">
 <!--<body class="mat-typography">-->
 <app-root></app-root>
+<script type="application/javascript">
+  var global = window;
+</script>
 
 
 </body>
